# trabalho_02-TPII

./: .gitignore  README.md  adicionar_agenda.cpp  adicionar_agenda.h  adicionar_agenda.ui  agenda.cpp  agenda.h  atendente.cpp  atendente.cpp.BtkLFm  atendente.h  atendente_cadastrar_medico.cpp  atendente_cadastrar_medico.h  atendente_cadastrar_medico.ui  atendente_cadastrar_usuario.cpp  atendente_cadastrar_usuario.h  atendente_cadastrar_usuario.ui  atendente_tela.cpp  atendente_tela.h  atendente_tela.ui  cadastrar_atendente.cpp  cadastrar_atendente.h  cadastrar_atendente.ui  cadastrar_medico.cpp  cadastrar_medico.h  cadastrar_medico.ui  deletar_user.cpp  deletar_user.h  deletar_user.ui  diagrama_de_casos_de_uso.asta  diagrama_de_classe_trabalho_02_tp2.asta  get_agenda.cpp  get_agenda.h  get_agenda.ui  lixo.cpp  login.cpp  login.h  login.ui  login1.ui  main.cpp  mainwindow.cpp  (+19 more)
build-sistema-Desktop-Debug/: Makefile  libsistema.so.1.0  libsistema.so.1.0.0
build-sistema-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-sistema-Desktop-Release/.qtc_clangd/: compile_commands.json
lixo/build-sistema-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
lixo/build-sistema-Desktop-Debug/.qtc_clangd/: compile_commands.json
lixo/build-sistema-Desktop-Debug/atendente_autogen/: deps  (+1 more)
lixo/sistema/: CMakeLists.txt  atendente.cpp  atendente.h  sistema.cpp  sistema.h  sistema_global.h
lixo/src/: Atendente.cpp  main.cpp  notas.txt  sistema.cpp
sistema/: atendente.cpp  atendente.h  main.cpp  sistema.cpp  sistema.h  sistema.pro
(+139 files in other folders)
